--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "homepage": "https://github.com/binary-butterfly/eslint-config#readme",
   "peerDependencies": {
     "@babel/eslint-parser": "^7.18.2",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
     "eslint": "^8.24.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-testing-library": "^5.6.0"
