--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@typescript-eslint/parser": "^5.43.0",
     "eslint": "^8.24.0",
     "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-testing-library": "^5.6.0"
+    "eslint-plugin-testing-library": "^5.6.0",
+    "eslint-plugin-use-effect-no-deps": "^1.1.2"
   }
 }
