--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/binary-butterfly/eslint-config#readme",
   "peerDependencies": {
     "@babel/eslint-parser": "^7.18.2",
+    "@binary-butterfly/eslint-plugin-no-new-comparisons": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "eslint": "^8.24.0",
